# GlobalTerrorismAnalysis_ETL

./: .gitignore  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt  setup_airflow_env.sh
airflow/dags/: gta_dag.py
airflow/dags/tasks/: etl.py
airflow/plugins/src/database/: database.py
dags/: gta_dag.py
dags/tasks/: etl.py  gta_etl.py
dashboard/: GlobalTerrorismDashboard.pbix
docs/guides/: azure_postgres.md  drive_api.md  drive_settings.md  gcp_postgres.md
function/connection/: connection.py
function/database/: database.py
gx/: great_expectations.yml
gx/expectations/: .ge_store_backend_id  api_suite.json  gtd_suite.json
gx/uncommitted/: config_variables.yml
gx/uncommitted/validations/: .ge_store_backend_id
notebooks/: 001_rawDataLoad.ipynb  002_EDAETL.ipynb  002_GlobalTerrorismEDA.ipynb  002_GlobalTerrorismEDA_Load.ipynb  002_rawEDA.ipynb  003_cleanDataLoad.ipynb  004_api_analysis.ipynb  005_ML_model.ipynb  006_GX.ipynb  connection.py
src/database/: database.py  db_operations.py
src/etl/: etlFunctions.py
src/extract/: extract_api.py  extract_db.py
src/gx_functions/: data_validation.py
src/load/: load_DWH.py
src/rawLoad/: raw.py
src/streaming/: kafka_functions.py
src/transform/: merge.py  transform_DWH.py  transform_api.py  transform_db.py
src/transformation/: transformation.py
