[tool.poetry]
name = "globalterrorismanalysis-etl"
version = "0.1.0"
description = ""
authors = ["Martín García <martin.garcia@uao.edu.co>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.2"
matplotlib = "^3.9.2"
sqlalchemy = "^2.0.32"
psycopg2-binary = "^2.9.9"
python-dotenv = "^1.0.1"
seaborn = "^0.13.2"
sqlalchemy-utils = "^0.41.2"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
package-mode = false