[tool.poetry]
name = "globalterrorismanalysis-etl"
version = "0.1.0"
description = ""
authors = ["Martín García <martin.garcia@uao.edu.co>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
apache-airflow = {version = "2.10.0", python = ">=3.10,<3.13"}
pandas = "2.1.4"
matplotlib = "^3.9.2"
python-dotenv = "^1.0.1"
seaborn = "^0.13.2"
psycopg2-binary = "2.9.9"
kafka-python = "^2.0.2"
scikit-learn = "^1.5.2"
xgboost = "^2.1.2"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]